# wxgis

./: CMakeLists.txt  ChangeLog_rus.txt  Configs.md  CreateLocaleFiles.md  Linux_install.md  Localization.md  Makefile  ProjectHome.md  ScreenShots.md  TranslateLocaleFiles.md
src/carto/: CMakeLists.txt  cartocmd.cpp  featuredataset.cpp  featurelayer.cpp  featurerenderer.cpp  interpolation.cpp  layer.cpp  map.cpp  mapview.cpp  rasterdataset.cpp  rasterlayer.cpp  rasterrenderer.cpp  simplerenderer.cpp  spvalidator.cpp  stretch.cpp  tableview.cpp  transformthreads.cpp
src/cartoui/: CMakeLists.txt  cartocmd.cpp  formatmenu.cpp  identifydlg.cpp  mapview.cpp  mapviewex.cpp  mxeventui.cpp  rasterdatasetcmd.cpp  sqlquerydialog.cpp  tableview.cpp
src/catalog/: CMakeLists.txt  catop.cpp  gxarchfolder.cpp  gxarchivefactory.cpp  gxcatalog.cpp  gxcsvfactory.cpp  gxdataset.cpp  gxdbconnections.cpp  gxdbconnfactory.cpp  gxdiscconnection.cpp  gxdiscconnections.cpp  gxevent.cpp  gxfile.cpp  gxfilefactory.cpp  gxfilters.cpp  gxfolder.cpp  gxfolderfactory.cpp  gxkmldataset.cpp  gxmapinfofactory.cpp  gxmldataset.cpp  gxmlfactory.cpp  gxobject.cpp  gxobjectfactory.cpp  gxpostgisdataset.cpp  gxprjfactory.cpp  gxrasterfactory.cpp  gxremoteconn.cpp  gxselection.cpp  gxshapefactory.cpp  gxspatreffolder.cpp  gxwebconnections.cpp  gxxmlconnstor.cpp
src/core/: CMakeLists.txt  config.cpp  crypt.cpp  event.cpp  format.cpp  globalfn.cpp  init.cpp  process.cpp
trunk/: CMakeLists.txt  ChangeLog_rus.txt
trunk/app_config/: wxCatalog.xml  wxGISCatalog.xml  wxGISCommon.xml  wxGISContDialog.xml  wxGISServer.xml
trunk/app_loc/pt/: catalogui.po  geoprocess.po
trunk/art/: check_16.xpm  cont_view_16.xpm  cont_view_48.xpm  csv_16.xpm  csv_48.xpm  db2.xpm  dbschema_48.xpm  dxf_dset_16.xpm  dxf_dset_48.xpm  edit.xpm  edit_copy.xpm  edit_cut.xpm  edit_paste.xpm  flash.xpm  folder1_16.xpm  folder1_48.xpm  folder_16.xpm  folder_48.xpm  folder_arch1_48.xpm  folder_arch_48.xpm  folder_conn_16.xpm  folder_conn_48.xpm  folder_conn_del.xpm  folder_conn_del16.xpm  folder_conn_disbl16.xpm  folder_conn_new.xpm  folder_conns_16.xpm  folder_conns_48.xpm  folder_new.xpm  folder_new16.xpm  folder_prj_16.xpm  folder_prj_48.xpm  folder_up.xpm  gml_dset_48.xpm  go.xpm  id.xpm  info.xpm  kml_dset_16.xpm  kml_dset_48.xpm  kml_subdset_16.xpm  (+67 more)
trunk/cmake/: FindGDAL.cmake  FindwxGISGDAL.cmake  app.cmake  common.cmake  installapp.cmake  installlib.cmake  lib.cmake
trunk/dialogs/: sqlquerydialog.fbp
trunk/gisdata/: continent.qix  grid30.sbn  holes.sbx  holes.shx  sys.7z  teeas.sbx
trunk/include/wxgis/: base.h  datasource.h  defs.h  resource.h  version.h
trunk/inst/: wxgis.nsi  wxgis_0.3.0.nsi
trunk/inst/doc/: COPYING_EN  ChangeLog_en.txt
trunk/loc/cs/: carto_cat.po  cartoui.po  cat_app.mo  cat_app.po  cat_app_cat.mo  catalog_cat.mo  catalogui_cat.mo  conf.mo  conf.po  core.mo  display.po  framework_cat.mo  geoprocess_cat.mo  geoprocess_cat.po  geoprocessing_cat.po  geoprocessingui_cat.po  networking_cat.po  remoteserver_cat.mo  remoteserverui.mo  srv_app.mo  srv_auth.mo  srv_auth.po  srv_framework.mo  srv_framework.po  srv_networking.mo
trunk/loc/newtr/: carto.po  cartoui.po  cat_app.po  catalog.po  catalogui.po  geoprocessingui.po
trunk/loc/pt/: cartoui.po  geoprocessing.po
trunk/loc/ru/: carto.po  carto_cat.po  cat_app_cat.po  catalog.po  catalog_cat.po  catalogui_cat.po  core.po  datasource.po  datasource_cat.po  framework_cat.po  geoprocess_cat.po  geoprocessing_cat.po  networking_cat.po  remoteserver_cat.po  remoteserverui_cat.po  ru.po  srv_app.po  srv_auth.po  srv_framework.po
trunk/src/: version_app.rc  version_dll.rc
trunk/src/app/: gisaboutdlg.cpp  splash.cpp
trunk/src/carto/: CMakeLists.txt  cartocmd.cpp  featuredataset.cpp  featurelayer.cpp  featurerenderer.cpp  interpolation.cpp  layer.cpp  map.cpp  mapview.cpp  mxevent.cpp  rasterdataset.cpp  rasterlayer.cpp  rasterrenderer.cpp  renderer.cpp  simplerenderer.cpp  spvalidator.cpp  stretch.cpp  tableview.cpp  transformthreads.cpp
trunk/src/cartoui/: CMakeLists.txt  cartocmd.cpp  formatmenu.cpp  identifydlg.cpp  mapview.cpp  mxeventui.cpp  rasterdatasetcmd.cpp  sqlquerydialog.cpp  tableview.cpp
trunk/src/cat_app/: CMakeLists.txt  catalogapp.cpp  catalogframe.cpp
trunk/src/catalog/: CMakeLists.txt  catop.cpp  gxarchfolder.cpp  gxarchivefactory.cpp  gxcatalog.cpp  gxcsvfactory.cpp  gxdataset.cpp  gxdbconnections.cpp  gxdbconnfactory.cpp  gxdiscconnection.cpp  gxdiscconnections.cpp  gxfile.cpp  gxfilefactory.cpp  gxfilters.cpp  gxfolder.cpp  gxfolderfactory.cpp  gxkmldataset.cpp  gxmapinfofactory.cpp  gxmlfactory.cpp  gxobject.cpp  gxpostgisdataset.cpp  gxprjfactory.cpp  gxrasterfactory.cpp  gxremoteconn.cpp  gxselection.cpp  gxshapefactory.cpp  gxspatreffolder.cpp  gxwebconnections.cpp  gxwebconnfactory.cpp  gxxmlconnstor.cpp
trunk/src/catalogui/: CMakeLists.txt  catalogcmd.cpp  createnewcmd.cpp  customizedlg.cpp  gxapplication.cpp  gxarchfolderui.cpp  gxcatalogui.cpp  gxcontdialog.cpp  gxcontentview.cpp  gxdatasetui.cpp  gxdbconnectionsui.cpp  gxdbconnfactoryui.cpp  gxdialog.cpp  gxdiscconnectionsui.cpp  gxdiscconnectionui.cpp  gxeventui.cpp  gxfileui.cpp  gxfilters.cpp  gxfolderfactoryui.cpp  gxfolderui.cpp  gxkmldatasetui.cpp  gxlocationcombobox.cpp  gxmapinfofactoryui.cpp  gxmapview.cpp  gxmlfactoryui.cpp  gxnoview.cpp  gxobgdialog.cpp  gxobjcmd.cpp  gxpending.cpp  gxpostgisdatasetui.cpp  gxprjfactoryui.cpp  gxpropertypages.cpp  gxrasterfactoryui.cpp  gxremoteconnui.cpp  gxselection.cpp  gxshapefactoryui.cpp  gxspatreffolderui.cpp  gxtableview.cpp  gxtabview.cpp  gxtreeview.cpp  (+10 more)
trunk/src/conf/: confmain.cpp
trunk/src/core/: CMakeLists.txt  app.cpp  config.cpp  crypt.cpp  format.cpp  init.cpp  process.cpp
trunk/src/datasource/: CMakeLists.txt  curl.cpp  cursor.cpp  datacontainer.cpp  dataset.cpp  featuredataset.cpp  filter.cpp  postgisdataset.cpp  quadtree.cpp  rasterdataset.cpp  rasterop.cpp  spvalidator.cpp  sysop.cpp  table.cpp  wmsdataset.cpp
trunk/src/display/: CMakeLists.txt  displaytransformation.cpp  gisdisplay.cpp  (+5 more)
(+2005 files in other folders)
